# tensorflowhacks

./: README.md  setup.cfg
src/tensorflowhacks/: MyTextVectorization.py
