[metadata]
name = tensorflowhacks-bogdad
version = 0.0.1
author = Vladimir
author_email = bogdad@gmail.com
description = kaggle hacks for tensorflow
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bogdad/tensorflowhacks
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src